feat: Implement comprehensive outbox pattern for transactional event delivery
- Add outbox pattern to critical services: funds, order, trade, ledger, user, payment, report services
- Replace direct RabbitTemplate publishing with OutboxService.captureEvent() for atomicity
- Enable @EnableScheduling in all services for OutboxProcessor
- Update all event classes to extend BaseEvent for correlation and timestamp
- Add comprehensive tests for outbox integration
- Achieve 73% coverage (8/11 services) with 100% protection for critical financial operations
- Market service uses optimal Kafka pattern, notification and schedule services use appropriate patterns

This ensures:
- No lost events during system crashes
- Guaranteed event delivery with automatic retries
- Complete audit trail for financial operations
- Transactional safety across all critical business operations

--- a/backend/market-service/pom.xml
+++ b/backend/market-service/pom.xml
@@ -14,6 +14,8 @@
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+        <protobuf.version>3.25.1</protobuf.version>
+        <grpc.version>1.60.0</grpc.version>
     </properties>
 
     <dependencies>
@@ -127,13 +129,49 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Protobuf for Kafka serialization -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>${protobuf.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
+        <extensions>
+            <!-- OS Detector Extension for Protobuf Plugin -->
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.7.1</version>
+            </extension>
+        </extensions>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <!-- Protobuf Maven Plugin -->
+            <plugin>
+                <groupId>org.xolstice.maven.plugins</groupId>
+                <artifactId>protobuf-maven-plugin</artifactId>
+                <version>0.6.1</version>
+                <configuration>
+                    <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
+                    <pluginId>grpc-java</pluginId>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>compile-custom</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
