feat: Complete funds-service testing coverage
- Add repository tests for WalletRepository, FundsLockRepository, TransactionRepository
- Add WireMock integration tests for LedgerClient contract testing
- Add SpringBoot integration tests for funds-service
- Add application-test.yml with H2 configuration
- Add WireMock dependency to funds-service pom.xml
- Update testing-coverage.md workflow documentation

Total: 6 new test files (44 tests) added to funds-service
funds-service now has 19 files, 128 tests - complete coverage

--- a/backend/funds-service/pom.xml
+++ b/backend/funds-service/pom.xml
@@ -186,6 +186,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- WireMock for HTTP client testing -->
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock-standalone</artifactId>
+            <version>3.3.1</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- DevTools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
